# curly-lamp

./: .bandit  .dockerignore  .gitignore  .pre-commit-config.yaml  DESIGN_V2.md  DEVELOPMENT_HISTORY.md  Dockerfile  Dockerfile.test  HPC_DEPLOYMENT.md  Lineage_Colors_on_CDT.csv  Lineage_Colors_on_CDT.xlsx  PHASE1_IMPLEMENTATION.md  PHASE1_SUMMARY.md  PHASE2_IMPLEMENTATION.md  PHASE2_SUMMARY.md  PHASE2_SUMMARY.txt  PHASE3_IMPLEMENTATION.md  PHASE3_SUMMARY.md  PHASE4_IMPLEMENTATION.md  PHASE4_SUMMARY.md  PHASE5_IMPLEMENTATION.md  PHASE5_SUMMARY.md  PHASE6_IMPLEMENTATION.md  PROJECT_STATUS.md  README.md  Run1  Run1.out  Run1_CDT.err  Run1_CDT.out  Run1_CDT_test.err  Run1_CDT_test.out  Run1_custom.err  Run1_custom.out  Run2.out  Run2_custom.out  Run3.err  Run3.out  Run_var_sys.err  Run_var_sys.out  Run_var_sys_1.err  (+35 more)
.github/workflows/: build-singularity.yml  pre-release-checks.yml  test.yml
config/: conda_env.sh  config.R  config_s1.R  environment.yml  prop_model.txt  sge_job_template.sh
resources/: ACS_population_2019.tsv  ACStable_B01001_40_2018_5.txt  Hadoop_tables_variables.xlsx  Tests_ByCol_Date_Weekly.csv
src/sc2/: __init__.py  config.py
src/sc2/models/: __init__.py  nowcast.stan
src/sc2/pipeline/: __init__.py  aggregate.py  exceptions.py  export.py  fetch.py  model.py  weight.py
src/sc2/scripts/: __init__.py  run.py
tableau_util/: README.md  pull_tableau_data.py  signin.xml
tests/: conftest.py  test_config.py  test_export.py  test_integration.py  test_model.py  test_pipeline.py  test_weight.py
